# backstitch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/scripts/: require_green_workflows.py
.github/workflows/: ci.yml  local-llm.yml  release-gate.yml
backstitch/: __init__.py  __main__.py  analysis_llm.py  analysis_packets.py  analysis_results.py  artifact_contracts.py  check_pipeline.py  cli.py  code_parser.py  config.py  defaults.toml  diagnostics.py  doctor.py  exclusions.py  grammar.py  markdown_specs.py  models.py  profiles.py  python_refs.py  reporting.py  resolver.py  settings.py  target_roots.py
backstitch/prompts/: backstitch_style_analysis.md  invariant_binding_analysis.md
docs/: lessons.md
docs/agent-context/: README.md  context.index.yaml  decision-hierarchy.md  engineering-principles.md
docs/agent-context/runbooks/: adversarial-acceptance-probes.md  maintaining-traceability.md  review-loops-and-agent-bootstrap.md  writing-plans.md  writing-specs.md
docs/implementation/: 00-implementation-index.md  01-documentation-system.md  02-repository-map.md  03-agent-inventory.md  04-backstitch-style-traceability.md  05-release-publishing.md  06-choosing-a-local-model.md
docs/plans/: 2026-06-18-backstitch-style-spec-code-traceability-tool-plan.md  2026-07-01-backstitch-toml-configuration-plan.md  2026-07-02-backstitch-four-way-reconciliation-plan.md  2026-07-02-backstitch-traceability-exclusions-plan.md  2026-07-03-backstitch-release-publishing-plan.md  2026-07-03-input-validation-invariants-plan.md  2026-07-03-live-llm-tests-plan.md  2026-07-03-local-llm-eval-lane-plan.md  2026-07-06-analyze-json-mode-plan.md  2026-07-06-backstitch-organization-refactor-plan.md  2026-07-06-local-model-catalog-and-doctor-plan.md  2026-07-07-markdown-it-py-parser-plan.md  2026-07-07-review-findings-1-3-remediation-plan.md  2026-07-07-tree-sitter-code-parser-plan.md  2026-07-08-configurable-diagnostics-plan.md  2026-07-09-backstitch-invariant-traceability-plan.md  2026-07-10-local-default-live-llm-tests-plan.md  2026-07-10-local-llm-release-gate-stabilization-plan.md
docs/specs/: 00-specs-index.md  01-development-documentation-operating-model.md  02-backstitch-core.md  03-backstitch-configuration.md  04-backstitch-traceability-exclusions.md  05-backstitch-invariants.md
tests/: conftest.py  test_analysis_llm.py  test_analysis_packets.py  test_analysis_results.py  test_artifact_contracts.py  test_backstitch_corpus_traceability.py  test_behavior_freeze.py  test_bootstrap.py  test_check_pipeline.py  test_cli.py  test_cli_config.py  test_code_parser.py  test_config.py  test_diagnostics.py  test_doctor.py  test_exclusions.py  test_grammar.py  test_issue_code_coverage.py  test_live_llm_helpers.py  test_markdown_specs.py  test_models.py  test_pytest_policy.py  test_python_noqa.py  test_python_refs.py  test_release_script.py  test_release_workflow.py  test_release_workflow_gate.py  test_reporting.py  test_resolver.py  test_resolver_ladder.py  test_review_remediation.py  test_settings.py  test_target_roots.py  test_weft_corpus_traceability.py
tests/acceptance/: README.md  conftest.py  test_probe_analysis.py  test_probe_boundaries.py  test_probe_committed_config.py  test_probe_config.py  test_probe_invariants.py  test_probe_parsing.py  test_probe_selfacceptance.py
tests/fixtures/: traceability_project.expected.json
tests/fixtures/clean_project/docs/specs/: 01-Clean.md
tests/fixtures/clean_project/pkg/: mod.py
tests/fixtures/config_project/: .backstitch.toml
tests/fixtures/noqa_scope_project/docs/specs/: 01-n.md
tests/fixtures/noqa_scope_project/pkg/: mod.py  moddoc.py
tests/fixtures/path_ladder_project/docs/specs/: 01-Ladder.md
tests/fixtures/path_ladder_project/pkg/inner/: shared.py  unique.py
tests/fixtures/traceability_project/docs/specifications/: 01-Core.md  01A-Core_Planned.md  02-Weft_Style.md
tests/fixtures/traceability_project/src/: ranges.py  runtime.py
tests/fixtures/traceability_project/tests/: test_runtime.py
tests/live/: test_live_llm.py
