[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backstitch"
version = "0.1.0"
description = "Backstitch style spec-code traceability checks and semantic review tooling"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Van Lindberg", email = "van@modelmonster.ai"},
]
keywords = [
    "documentation",
    "specifications",
    "traceability",
    "static-analysis",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "llm>=0.31",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.12",
]

[project.scripts]
backstitch = "backstitch.cli:main"

[project.urls]
Repository = "https://github.com/VanL/backstitch"
Issues = "https://github.com/VanL/backstitch/issues"

[tool.hatch.build.targets.wheel]
packages = ["backstitch"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: tests that exercise an external command or package boundary",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "(^tests/)"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["backstitch"]
