[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backstitch"
version = "0.2.0"
description = "Backstitch style spec-code traceability checks and semantic review tooling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Van Lindberg", email = "van@modelmonster.ai"},
]
keywords = [
    "documentation",
    "specifications",
    "traceability",
    "static-analysis",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "llm>=0.31",
    "markdown-it-py>=4.2.0",
    "tree-sitter==0.26.0",
    "tree-sitter-python==0.25.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.6",
    "ruff>=0.12",
]

[project.scripts]
backstitch = "backstitch.cli:main"

[project.urls]
Repository = "https://github.com/VanL/backstitch"
Issues = "https://github.com/VanL/backstitch/issues"

[tool.hatch.build.targets.wheel]
packages = ["backstitch"]

[tool.backstitch]
# Top-level keys ([CFG-6.7]); NOT under [profile] -- TOML table scope would
# make extend_exclude a profile key and fail strict load. extend_exclude
# appends to defaults (which already exclude .worktrees); a bare `exclude`
# would REPLACE the defaults and start scanning four dead implementations.
extend_exclude = ["tests/fixtures/**", "tests/acceptance/fixtures/**"]

[tool.backstitch.profile]
name = "backstitch-style-v1"
spec_roots = ["docs/specs"]
plan_roots = ["docs/plans"]
code_roots = ["backstitch", "tests"]
meta_spec_globs = ["docs/specs/01-development-documentation-operating-model.md"]

[tool.backstitch.lint.per-file-ignores]
# Test files legitimately cite spec sections without being implementation
# owners; the unmapped-citation inventory is noise for them.
"tests/*" = ["CODE_REF_UNMAPPED_FROM_SPEC", "SPEC_MAPPING_RECIPROCAL_MISSING"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: tests that exercise an external command or package boundary",
    "live_llm: tests that call a real LLM provider when explicitly enabled",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "(^tests/fixtures/)"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["backstitch"]
